--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "~1.17.1",
     "concat-stream": "^1.6.0",
     "cookie-parser": "~1.4.3",
@@ -17,6 +18,7 @@
     "mkdirp": "^0.5.1",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
+    "nodemon": "^2.0.15",
     "request": "^2.88.2",
     "serve-favicon": "~2.4.2",
     "streamifier": "^0.1.1"
