--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "jimp": "^0.2.28",
+    "kill-port": "^1.6.1",
     "mkdirp": "^0.5.1",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
